# esp32-iot-application

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
.cache/clangd/index/: JobsDemoExample.c.4676316DB0FB4E84.idx  NTC103.c.BFFDAAB6315596FE.idx  NTC103.h.EF1103D864EA8FB1.idx  ads111x.c.C9E384C95001C36B.idx  ads111x.h.696E57BF6725D24D.idx  ads130e08.c.3BD8895E080DF399.idx  ads130e08.h.964191A0E19E7CF6.idx  aht.c.A0CABEF3AAFDDE5F.idx  aht.h.8C4EFE22AD0D2708.idx  am2320.c.18725991B0FA48EB.idx  am2320.h.A542F497C6380372.idx  app_nvs.c.40E462562532A0BC.idx  app_nvs.h.B292C75F01485319.idx  aws_iot.c.A8FEBDDDE62C49E2.idx  aws_iot.h.12E361F09A10271F.idx  aws_iot_config.h.5F4611B11165EB78.idx  aws_iot_error.h.0F1E4F160BEB05FB.idx  aws_iot_jobs_interface.c.96B2DB617C4BCBE0.idx  aws_iot_jobs_interface.h.EDB82C127DDE9EA4.idx  aws_iot_jobs_json.c.328D034099672F1C.idx  aws_iot_jobs_json.h.AD11802254472F6F.idx  aws_iot_jobs_topics.c.E4A531A96F73AE7E.idx  aws_iot_jobs_topics.h.D6AA734CF06B84C1.idx  aws_iot_jobs_types.c.B24DD661D52A80E1.idx  aws_iot_jobs_types.h.43937546DD4ADAA4.idx  aws_iot_json_utils.c.A48403A724B342FB.idx  aws_iot_json_utils.h.342414B15AA716FF.idx  (+252 more)
main/: CMakeLists.txt  NTC103.c  NTC103.h  \  app_nvs.c  app_nvs.h  coding_style.c  http_server.c  http_server.h  main.c  mqtt_demo_mutual_auth.c  mqtt_demo_mutual_auth.h  rgb_led.c  rgb_led.h  sntp_time_sync.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
main/certs/: certificate_pem_crt  private_pem_key
main/webpage/: app.css  app.js  index.html
